--- a/jsf2demo/src/main/webapp/isag/_templates/template.xhtml
+++ b/jsf2demo/src/main/webapp/isag/_templates/template.xhtml
@@ -17,6 +17,7 @@
     </f:facet>
  
     <link type="text/css" rel="stylesheet" href="isag/_css/layout.css" />
+    <link type="text/css" rel="stylesheet" href="isag/_css/isag.css" />
     
     <f:facet name="last">
 		<!-- <script type="text/javascript" src="isag/_js/jQuery/jquery-2.0.2.min.js"></script>-->
